2006-02-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff: Sync Japanese documentation.

2007-02-10  Ethan Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_options): Remove C++-ism

	* src/set.c (parse_label_options) : Make sure that there is
	a default point type, so that 'set label <n> point' does in fact
	draw an acceptable point.
	Bug #1652654

	* term/latex.trm: Re-assign point types to match postscript and
	other terminals. Additional symbols are taken from the amssymb package.

2007-02-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, wait for Enter in console
	instead for a mouse click in a special window if the graph window is
	not (yet) present.

2007-02-10  Petr Mikulik  <mikulik@physics.muni.cz>

	SF #1651350 win terminal: pause mouse key|any does not work

	* src/mouse.c (event_keypress): Kill pending Pause dialog.

	* src/win/wpause.c (PauseBox): Don't show "OK CANCEL" dialog when
	pausing for mouse.

2007-02-09  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/pdf.trm (PDF_point): Point type 1 was incorrectly drawn as a dot.
	Bug #1656433

2007-02-10  Juergen Wieferink  <wieferink@freenet.de>

	* src/plot.c (main): Flag 'interactive' not reset to FALSE after running
	command "gnuplot - nonExistingScript.gp". On some platforms, gnuplot
	cannot 'exit' and goes to an infinite loop after Ctrl-D.
	Bug #1612995 

2007-02-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot draw_3d_graphbox):  Add special-case
	tests to insure that the plot border is drawn either in back or
	in front of the grid when splot_map is set.
	Bug #1655001

	* term/README:  Confusing typo in TERM_TABLE layout.

2007-02-09  Petr Mikulik  <mikulik@physics.muni.cz>
	* docs/gnuplot.doc: Add a dummy label for "3 data style" to avoid
	bug in doc2gih (try "help contour").

2007-02-08  Petr Mikulik  <mikulik@physics.muni.cz>
